--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -9,8 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/monster/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
+      "C:\\Users\\Shujaat\\Anaconda3\\lib\\site-packages\\gensim\\utils.py:1167: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -31,25 +31,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "MAX_NB_WORDS = 200000\n",
-    "MAX_SEQUENCE_LENGTH = 30\n",
-    "EMBEDDING_DIM = 300"
+    "MAX_SEQUENCE_LENGTH = 100\n",
+    "EMBEDDING_DIM = 100"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "EMBEDDING_FILE = \"GoogleNews-vectors-negative300.bin\"\n",
     "category_index = {\"clothing\":0, \"camera\":1, \"home\":2}\n",
     "category_reverse_index = dict((y,x) for (x,y) in category_index.items())\n",
     "STOPWORDS = set(stopwords.words(\"english\"))"
@@ -58,6 +53,37 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indexing word vectors.\n",
+      "Found 400000 word vectors.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Indexing word vectors.')\n",
+    "\n",
+    "embeddings_index = {}\n",
+    "GLOVE_DIR_DATA = 'glove.6B.100d.txt'\n",
+    "\n",
+    "file = open(GLOVE_DIR_DATA, encoding=\"utf8\")\n",
+    "\n",
+    "for line in file:\n",
+    "    values = line.split()\n",
+    "    word = values[0]\n",
+    "    coefs = np.asarray(values[1:], dtype='float32')\n",
+    "    embeddings_index[word] = coefs\n",
+    "\n",
+    "print('Found %s word vectors.' % len(embeddings_index))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,10 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess(text):\n",
@@ -103,13 +127,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "all_texts = clothing['title'] + cameras['title'] + home['title']\n",
+    "all_texts = clothing['title'] + ' ' + cameras['title'] + ' ' + home['title']\n",
     "all_texts = all_texts.drop_duplicates(keep=False)\n",
     "\n",
     "tokenizer = Tokenizer(num_words=MAX_NB_WORDS)\n",
@@ -126,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +160,7 @@
       "sports\t\t16\n",
       "action\t\t13\n",
       "spy\t\t7\n",
-      "pen\t\t55\n",
+      "pen\t\t57\n",
       "camera\t\t2\n"
      ]
     }
@@ -154,18 +176,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Text to Vector [[16, 13, 2], [7, 55, 2]]\n",
+      "Text to Vector [[16, 13, 2], [7, 57, 2]]\n",
       "Padded Vector [[ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
-      "   0  0  0 16 13  2]\n",
+      "   0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "   0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "   0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "   0 16 13  2]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
-      "   0  0  0  7 55  2]]\n"
+      "   0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "   0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "   0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "   0  7 57  2]]\n"
      ]
     }
    ],
@@ -178,16 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "clothing: \t\t [1. 0. 0.]\n",
-      "camera: \t\t [0. 1. 0.]\n",
-      "home: \t\t\t [0. 0. 1.]\n"
+      "clothing: \t\t [ 1.  0.  0.]\n",
+      "camera: \t\t [ 0.  1.  0.]\n",
+      "home: \t\t\t [ 0.  0.  1.]\n"
      ]
     }
    ],
@@ -199,18 +227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "clothing shape:  (392721, 30)\n",
-      "electronics shape:  (1347, 30)\n",
+      "clothing shape:  (392721, 100)\n",
+      "electronics shape:  (1347, 100)\n",
       "home appliances shape:  (11425, 2)\n",
       "----------\n",
-      "combined data shape:  (405493, 30)\n",
+      "combined data shape:  (405493, 100)\n",
       "combined category/label shape:  (405493, 3)\n"
      ]
     }
@@ -230,10 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "VALIDATION_SPLIT = 0.3\n",
@@ -250,24 +276,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 3000000 word vectors of word2vec\n"
-     ]
-    }
-   ],
-   "source": [
-    "word2vec = KeyedVectors.load_word2vec_format(EMBEDDING_FILE, binary=True)\n",
-    "print('Found %s word vectors of word2vec' % len(word2vec.vocab))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -275,23 +283,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Null word embeddings: 1473\n"
+      "Preparing embedding matrix.\n",
+      "Found 2625 unique tokens.\n",
+      "Null word embeddings: 973\n"
      ]
     }
    ],
    "source": [
+    "print('Preparing embedding matrix.')\n",
     "from keras.layers import Embedding\n",
     "word_index = tokenizer.word_index\n",
-    "nb_words = min(MAX_NB_WORDS, len(word_index))+1\n",
+    "print('Found %s unique tokens.' % len(word_index))\n",
     "\n",
-    "embedding_matrix = np.zeros((nb_words, EMBEDDING_DIM))\n",
+    "# prepare embedding matrix\n",
+    "num_words = min(MAX_NB_WORDS, len(word_index) + 1)\n",
+    "embedding_matrix = np.zeros((num_words, EMBEDDING_DIM))\n",
     "for word, i in word_index.items():\n",
-    "    if word in word2vec.vocab:\n",
-    "        embedding_matrix[i] = word2vec.word_vec(word)\n",
+    "    if i >= MAX_NB_WORDS:\n",
+    "        continue\n",
+    "    embedding_vector = embeddings_index.get(word)\n",
+    "    if embedding_vector is not None:\n",
+    "        # words not found in embedding index will be all-zeros.\n",
+    "        embedding_matrix[i] = embedding_vector\n",
+    "\n",
     "print('Null word embeddings: %d' % np.sum(np.sum(embedding_matrix, axis=1) == 0))\n",
     "\n",
-    "embedding_layer = Embedding(embedding_matrix.shape[0], # or len(word_index) + 1\n",
-    "                            embedding_matrix.shape[1], # or EMBEDDING_DIM,\n",
+    "# load pre-trained word embeddings into an Embedding layer\n",
+    "# note that we set trainable = False so as to keep the embeddings fixed\n",
+    "embedding_layer = Embedding(num_words,\n",
+    "                            EMBEDDING_DIM,\n",
     "                            weights=[embedding_matrix],\n",
     "                            input_length=MAX_SEQUENCE_LENGTH,\n",
     "                            trainable=False)"
@@ -300,9 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# from keras.models import Sequential\n",
@@ -330,9 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# model.fit(x_train, y_train, validation_data=(x_val, y_val), epochs=2, batch_size=128)\n",
@@ -343,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -353,9 +369,9 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_1 (Embedding)      (None, 30, 300)           817200    \n",
+      "embedding_1 (Embedding)      (None, 100, 100)          262600    \n",
       "_________________________________________________________________\n",
-      "conv1d_1 (Conv1D)            (None, 28, 250)           225250    \n",
+      "conv1d_1 (Conv1D)            (None, 98, 250)           75250     \n",
       "_________________________________________________________________\n",
       "global_max_pooling1d_1 (Glob (None, 250)               0         \n",
       "_________________________________________________________________\n",
@@ -369,9 +385,9 @@
       "_________________________________________________________________\n",
       "activation_2 (Activation)    (None, 3)                 0         \n",
       "=================================================================\n",
-      "Total params: 1,105,953\n",
-      "Trainable params: 288,753\n",
-      "Non-trainable params: 817,200\n",
+      "Total params: 401,353\n",
+      "Trainable params: 138,753\n",
+      "Non-trainable params: 262,600\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -396,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -404,33 +420,40 @@
      "output_type": "stream",
      "text": [
       "Train on 283846 samples, validate on 121647 samples\n",
-      "Epoch 1/5\n",
-      "283846/283846 [==============================] - 395s 1ms/step - loss: 0.0028 - acc: 0.9991 - val_loss: 0.0017 - val_acc: 0.9998\n",
-      "Epoch 2/5\n",
-      "283846/283846 [==============================] - 387s 1ms/step - loss: 7.3636e-04 - acc: 0.9999 - val_loss: 0.0022 - val_acc: 0.9998\n",
-      "Epoch 3/5\n",
-      "283846/283846 [==============================] - 385s 1ms/step - loss: 7.1943e-04 - acc: 0.9999 - val_loss: 0.0016 - val_acc: 0.9998\n",
-      "Epoch 4/5\n",
-      "283846/283846 [==============================] - 384s 1ms/step - loss: 6.3839e-04 - acc: 0.9999 - val_loss: 0.0018 - val_acc: 0.9998\n",
-      "Epoch 5/5\n",
-      "283846/283846 [==============================] - 381s 1ms/step - loss: 5.6420e-04 - acc: 1.0000 - val_loss: 0.0019 - val_acc: 0.9999\n",
-      "Test loss: 0.0018763479748700844\n",
-      "Test accuracy: 0.9998602513831003\n"
+      "Epoch 1/2\n",
+      "283846/283846 [==============================] - 943s 3ms/step - loss: 0.0038 - acc: 0.9990 - val_loss: 0.0017 - val_acc: 0.9998\n",
+      "Epoch 2/2\n",
+      "283846/283846 [==============================] - 1069s 4ms/step - loss: 5.0153e-04 - acc: 0.9999 - val_loss: 0.0020 - val_acc: 0.9998\n",
+      "Test loss: \t 0.00203745497136\n",
+      "Test Accuracy: \t 0.999819148849\n"
      ]
     }
    ],
    "source": [
-    "model_1.fit(x_train, y_train, validation_data=(x_val, y_val), epochs=5, batch_size=128)\n",
-    "score = model_1.evaluate(x_val, y_val, verbose=0)\n",
-    "print('Test loss:', score[0])\n",
-    "print('Test accuracy:', score[1])\n",
+    "from keras.callbacks import LearningRateScheduler, EarlyStopping\n",
+    "from keras.callbacks import ModelCheckpoint\n",
     "\n",
-    "model_1.save('my_model.h5')  # creates a HDF5 file 'my_model.h5'"
+    "#Training the model and saving the best one!!\n",
+    "batch_size = 128\n",
+    "annealer = LearningRateScheduler(lambda x: 1e-3 * 0.9 ** x)\n",
+    "earlystop = EarlyStopping(patience=5)\n",
+    "modelsave = ModelCheckpoint(\n",
+    "    filepath='product_model_1.h5', save_best_only=True, verbose=0)\n",
+    "model_1.fit(\n",
+    "    x_train, y_train, batch_size=batch_size,\n",
+    "    epochs=2, \n",
+    "    validation_data=(x_val, y_val),\n",
+    "    callbacks=[annealer, earlystop, modelsave]\n",
+    ")\n",
+    "\n",
+    "score = model_1.evaluate(x_val, y_val, verbose=0)\n",
+    "print('Test loss: \\t', score[0])\n",
+    "print('Test Accuracy: \\t', score[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,12 +461,12 @@
     "\n",
     "from keras.models import load_model\n",
     "\n",
-    "model_1 = load_model('my_model.h5')\n"
+    "model_1 = load_model('product_model_1.h5')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -453,9 +476,9 @@
       "----------\n",
       "Predicted category:  camera\n",
       "----------\n",
-      "Clothing Probability:  5.4753313e-22\n",
-      "Camera Probability:  0.03814595\n",
-      "home probability:  2.4052846e-19\n"
+      "Clothing Probability:  1.9271e-15\n",
+      "Camera Probability:  0.999904\n",
+      "home probability:  3.82342e-08\n"
      ]
     }
    ],
@@ -492,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
